reflectionfeedbackapi/src/ReflectionFeedback.Api/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reflectfeedback
spec:
  type: ClusterIP
  selector:
    app: reflectfeedback-pod
  ports:
  - port: 80
