reflectionfeedbackapi/src/ReflectionFeedback.Api/manifests/manifest-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reflectfeedback-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: reflectfeedback
          servicePort: 80
        path: /feedback(/|$)(.*)
